# bangle

./: Cargo.toml  Shuttle.toml  readme.md
migrations/: 1_initialize.sql
mockup/: index.html  style.css
res/: script.js  style.css
src/: main.rs  routes.rs  templates.rs
src/routes/: properties.rs  responses.rs
templates/: editview.stpl  error.stpl  header.stpl  index.stpl  readview.stpl
