[package]
name = "bangle"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
base64 = "0.22.1"
rand = "0.8.5"
sailfish = "0.8.3"
serde = { version = "1.0.207", features = ["derive"] }
shuttle-axum = "0.47.0"
shuttle-runtime = "0.47.0"
shuttle-shared-db = { version = "0.47.0", features = ["postgres", "sqlx"] }
sqlx = "0.7.1"
tokio = "1.28.2"
tower-http = { version = "0.5.0", features = ["fs"] }
